--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <i class="icon fas fa-cloud-download-alt backup"></i>
             <div class="content">
                 <h2>备用云盘</h2>
-                <p>kc6xj6ew.cn-nb1.rainapp.top</p>
+                <p>雨云云应用</p>
             </div>
         </a>
 
@@ -97,11 +97,11 @@
             </div>
         </a>
 
-        <a href="https://457132.xyz" class="service-item" target="_blank">
+        <a href="https://mail.457132.xyz" class="service-item" target="_blank">
             <i class="icon fas fa-mail-bulk backup"></i>
             <div class="content">
                 <h2>备用邮箱服务</h2>
-                <p>457132.xyz</p>
+                <p>mail.457132.xyz</p>
             </div>
         </a>
     </div>
