--- a/index.html
+++ b/index.html
@@ -15,11 +15,20 @@
             min-height: 100vh;
             margin: 0;
             padding: 20px;
+            background-image: url('https://www.mcxclr.top/f/m0tk/%E6%B5%81%E8%90%A4.png');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-blend-mode: overlay;
         }
 
         .container {
             max-width: 800px;
             width: 100%;
+            background-color: rgba(255, 255, 255, 0.85);
+            padding: 20px;
+            border-radius: 12px;
+            backdrop-filter: blur(5px);
         }
 
         .service-item {
