--- a/blog.html
+++ b/blog.html
@@ -231,9 +231,9 @@
             <article class="article-card">
                 <img src="https://via.placeholder.com/800x400" alt="文章图片" class="article-image">
                 <div class="article-content">
-                    <h2 class="article-title">如何学习前端开发</h2>
-                    <div class="article-meta">发布于 2023年5月15日 · 分类: 前端开发 · 10分钟阅读</div>
-                    <p class="article-excerpt">在这篇文章中，我将分享我学习前端开发的经验和路线图，包括HTML、CSS、JavaScript等核心技术的学习路径，以及如何构建实际项目来巩固所学知识...</p>
+                    <h2 class="article-title">星辰旅人测试3</h2>
+                    <div class="article-meta">发布于 2023年5月15日 · 分类: 测试</div>
+                    <p class="article-excerpt">星辰旅人测试3</p>
                     <a href="#" class="read-more">阅读更多</a>
                 </div>
             </article>
@@ -241,18 +241,18 @@
             <article class="article-card">
                 <img src="https://via.placeholder.com/800x400" alt="文章图片" class="article-image">
                 <div class="article-content">
-                    <h2 class="article-title">React Hooks 完全指南</h2>
-                    <div class="article-meta">发布于 2025年5月10日 · 分类: React · 15分钟阅读</div>
-                    <p class="article-excerpt">React Hooks 是React 16.8引入的新特性，它允许你在不编写class的情况下使用state和其他React特性。本文将详细介绍所有内置Hooks的使用方法和最佳实践...</p>
+                    <h2 class="article-title">星辰旅人测试2</h2>
+                    <div class="article-meta">发布于 2025年5月10日 · 分类: 测试</div>
+                    <p class="article-excerpt">星辰旅人测试2</p>
                     <a href="#" class="read-more">阅读更多</a>
                 </div>
             </article>
             
             <article class="article-card">
                 <div class="article-content">
-                    <h2 class="article-title">CSS Grid布局入门</h2>
-                    <div class="article-meta">发布于 2025年5月5日 · 分类: CSS · 8分钟阅读</div>
-                    <p class="article-excerpt">CSS Grid布局是创建复杂网页布局的强大工具。与Flexbox不同，Grid可以同时处理行和列，使得创建二维布局变得非常简单。本文将介绍Grid的基本概念和常用属性...</p>
+                    <h2 class="article-title">星辰旅人测试1</h2>
+                    <div class="article-meta">发布于 2025年5月5日 · 分类: 测试</div>
+                    <p class="article-excerpt">星辰旅人测试1</p>
                     <a href="#" class="read-more">阅读更多</a>
                 </div>
             </article>
@@ -261,7 +261,7 @@
         <aside>
             <div class="sidebar-widget">
                 <h3 class="widget-title">关于我</h3>
-                <p>星辰旅人，互联网私斋</p>
+                <p>星辰旅人 邮箱admin@mcxclr.top</p>
             </div>
             
             <div class="sidebar-widget">
