--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             min-height: 100vh;
             margin: 0;
             padding: 20px;
-            background-image: url('https://www.mcxclr.top/f/m0tk/%E6%B5%81%E8%90%A4.png');
+            background-image: url('https://wwwaaa123122.cn-nb1.rains3.com/wallpaper_1743911627447.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
