--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             min-height: 100vh;
             margin: 0;
             padding: 20px;
-            background-image: url('https://wwwaaa123122.cn-nb1.rains3.com/wallpaper_1743911627447.jpg');
+            background-image: url('https://wwwaaa123122.cn-nb1.rains3.com/aaa/Image_1748144986993.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
