--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </div>
         
         <footer>
-            <p>© 2025 星辰旅人</p>
+            <p>© 2025 星辰旅人  有事联系：admin@mcxclr.top</p>
         </footer>
     </div>
 </body>
