--- a/login/index.html
+++ b/login/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <meta name="baidu-site-verification" content="codeva-76mjfk7TRU" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星辰旅人服务导航</title>
