--- a/login/index.html
+++ b/login/index.html
@@ -228,14 +228,14 @@
                     </div>
                     <div>
                         <h2>星辰旅人云盘（主）</h2>
-                        <span class="service-url">pan.mcxclr.top</span>
+                        <span class="service-url">www.mcxclr.top</span>
                     </div>
                 </div>
                 <div class="card-content">
                     <p>星辰旅人云盘</p>
                 </div>
                 <div class="card-footer">
-                    <a href="https://pan.mcxclr.top" class="btn" target="_blank">
+                    <a href="https://www.mcxclr.top" class="btn" target="_blank">
                         访问云盘 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
