--- a/login/index.html
+++ b/login/index.html
@@ -21,7 +21,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 20px;
-            background-image: url('https://wwwaaa123122.cn-nb1.rains3.com/aaa/Image_1748144986993.png');
+            background-image: url('https://wwwaaa123122.cn-nb1.rains3.com/image_download_1748746155595.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
