--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 20px;
-            background-image: url('https://wwwaaa123122.cn-nb1.rains3.com/image_download_1748746155595.jpg');
+            background-image: url('https://alist.mcxclr.top/d/Image_1748831276428.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
