--- a/login/index.html
+++ b/login/index.html
@@ -582,7 +582,7 @@
     
     <audio id="bgMusic" loop>
         <!-- 使用指定的音乐文件 -->
-        <source src="https://wwwaaa123122.cn-nb1.rains3.com/music/HOYO-MiX-%E6%9C%AA%E6%9D%A5%E5%86%8D%E8%A7%81%28Instrumental%29.mp3" type="audio/mpeg">
+        <source src="https://wwwaaa123122.cn-nb1.rains3.com/music/HOYO-MiX-%E6%9C%AA%E6%9D%A5%E5%86%8D%E8%A7%81%20%28Instrumental%29.flac" type="audio/mpeg">
     </audio>
     
     <script>
