--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             </div>
             
             <div class="music-info">
-                <div class="song-title" id="songTitle">未来再见（星辰版）</div>
+                <div class="song-title" id="songTitle">未来再见</div>
                 <div class="artist" id="artist">HOYO-MiX</div>
             </div>
             
