--- a/index.html
+++ b/index.html
@@ -454,14 +454,14 @@
                     </div>
                     <div>
                         <h2>备用云盘</h2>
-                        <span class="service-url">kc6xj6ew.cn-nb1.rainapp.top</span>
+                        <span class="service-url">pan.mcxclr.top</span>
                     </div>
                 </div>
                 <div class="card-content">
                     <p>基于雨云云应用的备用云存储，一周同步一次主站。</p>
                 </div>
                 <div class="card-footer">
-                    <a href="https://kc6xj6ew.cn-nb1.rainapp.top" class="btn" target="_blank">
+                    <a href="https://pan.mcxclr.top" class="btn" target="_blank">
                         访问备用云盘 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
