--- a/index.html
+++ b/index.html
@@ -533,6 +533,8 @@
         
         <footer>
             <p>© 2025 星辰旅人    有事联系：admin@mcxclr.top</p>
+        <a href="https://icp.gov.moe/?keyword=20252091" target="_blank">萌ICP备20252091号</a>
+        <a href="https://icp.星.fun/id.php?keyword=20252007" target="_blank"> <img src="https://icp.星.fun/logo.png" width="20" height="20" style="vertical-align: middle; margin-right: 5px;">团ICP备20252007号</a>
         </footer>
     </div>
     
