--- a/index.html
+++ b/index.html
@@ -663,10 +663,11 @@
         </div>
         
         <footer>
-            <p>© 2025 星辰旅人    有事联系：admin@mcxclr.top</p>
+            <p>© 2025 星辰旅人    有事联系：i@xc-lr.cn</p>
             <a href="https://icp.gov.moe/?keyword=20252091" target="_blank">萌ICP备20252091号</a>
             <a href="https://icp.星.fun/id.php?keyword=20252007" target="_blank"> <img src="https://icp.星.fun/logo.png" width="20" height="20" style="vertical-align: middle; margin-right: 5px;">团ICP备20252007号</a>
-            <a href="https://timeline.182030.xyz" target="_blank">时间轴</a>
+            <a href="https://t.me/wwwaaa123122" target="_blank">Telegram</a>
+            <a href="https://x.com/wwwaaa123122" target="_blank">X(twitter)</a>
         </footer>
     </div>
     
