--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             <a href="https://icp.星.fun/id.php?keyword=20252007" target="_blank"> <img src="https://icp.星.fun/logo.png" width="20" height="20" style="vertical-align: middle; margin-right: 5px;">团ICP备20252007号</a>
             <a href="https://t.me/wwwaaa123122" target="_blank">Telegram</a>
             <a href="https://x.com/wwwaaa123122" target="_blank">X(twitter)</a>
-            <a href="https://www.bilibili.com/space/3493078983772353" target="_blank">Bilibili</a>
+            <a href="https://space.bilibili.com/3493078983772353" target="_blank">Bilibili</a>
             <a href="https://github.com/wwwaaa123122" target="_blank">Github</a>
         </footer>
     </div>
